force-app/main/default/objects/WheelContract__c/WheelContract__c.object-meta.xml
<CustomObject>
    <label>Master Supply Agreement</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Master Supply Agreements</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>