force-app/main/default/objects/WheelContract__c/fields/AdditionalBOS__c.field-meta.xml
<CustomField>
    <fullName>AdditionalBOS__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Additional BOS</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Master_Supply_Agreements3</relationshipName>
    <type>Lookup</type>
</CustomField>