force-app/main/default/objects/WheelContract__c/fields/AssignedBOS__c.field-meta.xml
<CustomField>
    <fullName>AssignedBOS__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Assigned BOS</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Master_Supply_Agreements1</relationshipName>
    <type>Lookup</type>
</CustomField>