force-app/main/default/objects/WheelContract__c/fields/ContractTerm__c.field-meta.xml
<CustomField>
    <fullName>ContractTerm__c</fullName>
    <formula>IF(
	OR(ISBLANK(StartDate__c), ISBLANK(EndDate__c)), NULL,
	(YEAR(EndDate__c) - YEAR(StartDate__c)) * 12 +
	(MONTH(EndDate__c) - MONTH(StartDate__c)) /*+ 1*/
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Contract Term</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>