force-app/main/default/objects/WheelContract__c/fields/DeliveryTerms__c.field-meta.xml
<CustomField>
    <fullName>DeliveryTerms__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Delivery Terms</label>
    <referenceTo>DeliveryTerms__c</referenceTo>
    <relationshipName>Wheel_Contracts</relationshipName>
    <type>Lookup</type>
</CustomField>