force-app/main/default/objects/WheelContract__c/fields/PaymentTerms__c.field-meta.xml
<CustomField>
    <fullName>PaymentTerms__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Payment Terms</label>
    <referenceTo>PaymentTerms__c</referenceTo>
    <relationshipName>Wheel_Contracts_PayTerms</relationshipName>
    <type>Lookup</type>
</CustomField>