force-app/main/default/objects/WheelContract__c/fields/SignedDate__c.field-meta.xml
<CustomField>
    <fullName>SignedDate__c</fullName>
    <label>Signed Date</label>
    <type>Date</type>
</CustomField>