force-app/main/default/objects/WheelContract__c/fields/SKU__c.field-meta.xml
<CustomField>
    <fullName>SKU__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>SKU</label>
    <referenceTo>ProducMainSKU__c</referenceTo>
    <relationshipName>Wheel_Contracts</relationshipName>
    <type>Lookup</type>
</CustomField>