force-app/main/default/objects/WheelContract__c/fields/Specification__c.field-meta.xml
<CustomField>
    <fullName>Specification__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Specification</label>
    <referenceTo>SpecVersion__c</referenceTo>
    <relationshipName>Wheel_Contracts</relationshipName>
    <type>Lookup</type>
</CustomField>