force-app/main/default/objects/WheelContract__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>CURRENCY_ISO_CODE</columns>
    <columns>Account__c</columns>
    <columns>StartDate__c</columns>
    <columns>EndDate__c</columns>
    <columns>DeliveryTerms__c</columns>
    <columns>PaymentTerms__c</columns>
    <columns>SignedDate__c</columns>
    <columns>Status__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>